# RMUA2026

./: .gitignore  README.md  drone_path.csv
doc/: README.md  RoboMaster2026_rules_v1.txt  obstacle_avoidance_handoff.md  parameter_tuning_and_startup.md
scripts/: common.sh  disable_pwm_controller.sh  enable_pwm_controller.sh  push_git_branch.sh  start_competition_mode.sh  start_official_path_mission.sh  start_official_path_mission_offscreen.sh  start_path_mission.sh  start_path_mission_offscreen.sh  start_pwm_stack.sh  start_pwm_stack_offscreen.sh  start_stack.sh  start_stack_offscreen.sh  stop_stack.sh
src/airsim_ros/: CMakeLists.txt  package.xml
src/rmua_flight_control/: CMakeLists.txt  package.xml
src/rmua_flight_control/include/rmua_flight_control/: official_eskf.hpp  official_pd_controller.hpp
src/rmua_flight_control/launch/: basic_pwm_controller.launch  basic_pwm_controller.launch.bak  basic_pwm_controller.launch.bak_speed_reduce_20260416  obstacle_avoidance.launch  official_pwm_controller.launch  official_pwm_path_mission.launch  pwm_hover_stack.launch  pwm_path_mission.launch  pwm_path_mission.launch.bak  pwm_path_mission.launch.pre_restore
src/rmua_flight_control/launch/patches/: pwm_path_mission.patch
src/rmua_flight_control/src/: basic_pwm_controller_node.cpp  obstacle_avoidance_node.cpp  official_eskf.cpp  official_eskf_node.cpp  official_pwm_controller_node.cpp  path_mission_node.cpp
src/rmua_msgs/: CMakeLists.txt  package.xml
src/rmua_msgs/msg/: SensorHubStatus.msg
src/rmua_sensor_hub/: CMakeLists.txt  package.xml
src/rmua_sensor_hub/launch/: competition_stack.launch  sensor_hub.launch
src/rmua_sensor_hub/src/: sensor_hub_node.cpp
