<?xml version="1.0"?>
<package format="2">
  <name>rmua_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for the RMUA2026 ROS workspace.</description>

  <maintainer email="hao@todo.todo">hao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
