<?xml version="1.0"?>
<package format="2">
  <name>rmua_sensor_hub</name>
  <version>0.1.0</version>
  <description>Sensor relay node for RMUA2026 simulator topics.</description>

  <maintainer email="hao@todo.todo">hao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rmua_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>topic_tools</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rmua_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rmua_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>roslaunch</exec_depend>
</package>
